--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Wes's Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="style.css">
 
 </head>
 
-
+<div class="wrapper">
 <header id="header">
   <div class="wrapper">
 
@@ -24,10 +23,10 @@
    
    <div class="nav">
     <nav>
-        <a href="/index.html" class="home">      Home</a>
-        <a href="/about"      class="about">     About</a>
-        <a id="contact"       class="contact">   Contact</a>
-        <a id="projects"      class="projects">  Projects</a>
+        <a href="/index.html" class="home">         Home</a>
+        <a href="/about"      class="about">        About</a>
+        <a href="/contact"       class="contact">   Contact</a>
+        <a href="/projects"      class="projects">  Projects</a>
      </nav>
    </div>
   </div>
@@ -48,7 +47,7 @@
         <h2>Hi! I'm James</h2>
        
         <h3>A little bit about myself:</h3>
-    <section>
+    <section class="aboutList">
       <ul>
          <li>I live in Atlanta Georgia</li>
          <li>Have a passion for traveling and <br>
@@ -58,6 +57,7 @@
          <li>When i'm not making awesome websites...</li>
          <li>I am usually off on Some kind of adventure</li>
       </ul>
+      
 
       <h2>Check it out</h2>
     </section>
@@ -119,7 +119,7 @@
 </div>
 
 
-
+</html>
 
 
 <!-- <nav>
