could have added so much more but time did not allow

--- a/index.html
+++ b/index.html
@@ -131,29 +131,33 @@
               </div>
             </div>
          </div>          
-</section>
+     </section>
+   <hr>
+ 
+   <!--The linked in account is just to the main as I need to create a linkedin-->
 
-<hr>
-<!--The linked in account is just to the main as I need to create a linkedin-->
-<section id="contactInfo">
-    <h2>Contact Me</h2>
-   <h3>For any and all of your Programing needs</h3>
-    <ol>
-      <li>
-        <a href="https://www.linkedin.com/" target="_blank">  Linkedin</a></li>
-      <li>
-        <a href="" target="_blank">                           GitHub</a></li>
-    </ol>
 
-</section>
-
-</div>
+    <section id="contactInfo">
+       <h2>Contact Me</h2>
+          <h3>For any and all of your Programing needs</h3>
+             <ol>
+               <li>
+                 <a href="https://www.linkedin.com/" target="_blank">Linkedin</a></li>
+               <li>
+                 <a href="https://github.com/James-Gitchell" target="_blank">GitHub</a></li>
+                 <li>Eracer444@gmail.com</li>
+                </ol>
+     </section>
+   <hr>
+  </div>
 </body>
+
+
 <footer>
     <div class="wrapper">
- 
-    
-        <copyright></copyright>
+        <div class="footerBackground"> 
+        <img src="picture-assets/PngItem_6090243.png"
+      </div>
     </div>
 </footer>
 
