fixed footer and working on links

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <footer>
     <div class="wrapper">
         <div class="footerBackground"> 
-        <img src="picture-assets/PngItem_6090243.png"
+        <img src="picture-assets/PngItem_6090243.png">
       </div>
     </div>
 </footer>
