--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
   <div class="wrapper">
    
     <section id="profilePic">
-      <img id="pictureOfMe" src="/picture-assets/FB_IMG_1612284190000.jpg" 
-      alt="profile picture of wes" style="width:25%">
+      <img id="pictureOfMe" src="picture-assets/FB_IMG_1612284190000.jpg" alt="profile picture of wes" style="width:25%">
     </section>
 
     
