updating profile pic

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="wrapper">
    
     <section id="profilePic">
-      <img id="pictureOfMe" src="picture-assets/FB_IMG_1612284190000.jpg" alt="profile picture of wes" style="width:25%">
+      <img src="picture-assets/profile.jpg" alt="profile picture of wes" id="pictureOfMe" style="width:25%">
     </section>
 
     
