--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="aboutList">
       <div class="listCenter">
       <ul>
-         <li class="bulletColors">I am am an Engineering Emersion Student @ Thinkful</li>                      
+         <li class="bulletColors">I am am an Engineering Immersion Student @ Thinkful</li>                      
          <li class="bulletColors">I am currently living in Atlanta Georgia , <br> &nbsp the 4th largest tech hub in the u.s </li>               
       </ul>
       </div>
@@ -81,7 +81,7 @@
 
     <h2>A few more things about me</h2>
 
-    <h3>Any developer can design succesful websites </h3>
+    <h3>Any developer can design successful websites </h3>
     
     <h3 class="bulletColors"">I am most passionate about:</h3>
 
